# 42-Python-for-Data-Science

0-Starting/ex01/: format_ft_time.py
0-Starting/ex02/: find_ft_type.py  tester.py
0-Starting/ex03/: NULL_not_found.py  tester.py
0-Starting/ex04/: whatis.py
0-Starting/ex05/: building.py
0-Starting/ex06/: filterstring.py  ft_filter.py  tester.py
0-Starting/ex07/: sos.py
0-Starting/ex08/: Loading.py  tester.py
0-Starting/ex09/: README.md  ft_package.py  pyproject.toml
1-Array/ex00/: give_bmi.py  tester.py
1-Array/ex01/: array2D.py  tester.py
1-Array/ex02/: load_image.py  tester.py
1-Array/ex03/: load_image.py  zoom.py
1-Array/ex04/: load_image.py  rotate.py
1-Array/ex05/: load_image.py  pimp_image.py  tester.py
2-DataTable/ex00/: load_csv.py
