[project]
name = "ft_package_42"
version = "0.0.2"
description = "A sample test package"
readme = "README.md"
authors = [
  {name = "eagle", email = "eagle@42.fr"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
